# pdf-translate

./: README.md  package-lock.json  package.json
.github/workflows/: build-win.yml
apps/electron/main/: index.js
apps/electron/preload/: index.js
engine/: README.md  pyproject.toml
engine/scripts/: build-server-win.ps1
engine/src/pdf2zh_engine/: runner.py  server.py
src/renderer/: App.tsx  global.d.ts
